@@ -14,6 +14,7 @@ Post v22.06.0
     NAT-T UDP encapsulation. Requires OVS support for IPsec custom tunnel
     options (which will be available in OVS 2.18).
   - Removed possibility of disabling logical datapath groups.
+  - Removed the copying of SB's Chassis other_config into external_ids.
 
 OVN v22.06.0 - 03 Jun 2022
 --------------------------
